data/styles.css
@font-face
{
    font-family: 'Roboto';
    font-weight: normal;
    font-style: normal;
    src: url('Roboto-Regular.ttf');
}

@font-face
{
    font-family: 'Roboto';
    font-weight: normal;
    font-style: italic;
    src: url('Roboto-Italic.ttf');
}

@font-face
{
    font-family: 'Roboto';
    font-weight: bold;
    font-style: normal;
    src: url('Roboto-Bold.ttf')
}

@font-face
{
    font-family: 'Roboto';
    font-weight: bold;
    font-style: italic;
    src: url('Roboto-BoldItalic.ttf')
}

.action-button
{
    display: block;
    text-align: center;
    font-size: 1.3rem;
    font-weight: bold;
    text-decoration: none;
    margin-bottom: 1rem;
}

.action-button:hover
{
    text-decoration: underline;
}

.margin-bottom-hack
{
    margin-bottom: 15rem;
}

.container::after {
  content: "";
  clear: both;
  display: table;
}

.article-item a
{
    text-decoration: none;
}

.header
{
    min-width: 300px;
    display: flex;
    justify-content: center;
}

.article-item
{
    width: 47.9%;
}
.article-items
{
    display:flex;
    justify-content: space-between;
}

.article-pair
{
    display: flex;
    justify-content: space-between;
    width: 48.9%;
}

.article-item h1
{
    font-size: 1.1rem;
}

.article-item p
{
    font-size: 0.8rem;
    color: #ccc;
    line-spacing: 0.5rem;
}

a
{
    user-select: text;
}


.article-item a
{
    display: block;
}

.article-item:hover img
{
    opacity:80%;
}


@media only screen and (max-width: 900px)
{
    .article-item img
    {
        margin-bottom: 0;
        float: left;
        width: 40%;
        margin-right: 1rem;
    }
    
    .article-item
    {
        margin-bottom: 1rem;
    }
    
    .article-items
    {
        display:block;
        justify-content: space-between;
    }

    .article-pair
    {
        display: flex;
        justify-content: space-between;
        width: 100%;
    }
}

@media only screen and (max-width: 620px){
    .article-item img
    {
        width: 30%;
    }
    .article-pair
    {
        display:block;
    }
    .article-item 
    {
        width: 100%;
    }
}

section
{
    padding-top: 1rem;
}

main.inner, main.expanded-inner, main .expanded-inner
{
    padding-top: 1rem;
}

.spacer
{
    height: 1rem;
}

h1
{
    margin-bottom: 0.5em;
    font-size: 1.6rem;
}

.contrast
{
    color: #fff;
    background-color: #222;
}

.header-title a
{
    display: block;
    padding-top: 1.0rem;
    font-size: 1.8rem;
}

.header-links a
{
    padding-top: 1.7rem;
    padding-bottom: 0.75rem;
    padding-right: 0.2rem;
    display: inline-block;
}

.blog-date-info
{
    color: #777;
    font-size: 0.75rem;
    margin-left: 0.6rem;
}

.os-warning
{
    background-color: maroon;
    margin: 1em 4em;
    margin-top: inherit;
    color: #ccc;
    //display: none;
}

.bordered
{
    border: 3px solid black;
}

h3
{
    font-size: 1.08rem;
    margin-bottom: 0.3rem;
}

.vector
{
    font-weight: bold;
    font-family: "Times New Roman", serif;
}

sub
{
    line-height: 0;
}

img
{
    image-orientation: from-image;
}

@media only screen and (max-width: 600px) {
    .os-warning
    {
        margin-left: 0;
        margin-right: 0;
    }
    
    .right-floating, .left-floating
    {
        margin-bottom: 1em;
    }
    
    .inner-desktop hr
    {
        display: none;
    }
}

.centered
{
    margin: 0 auto;
    display: block;
    margin-bottom: 1rem;
}

@media only screen and (min-width: 600px)
{
    .inner-desktop
    {
        padding-left: 1.2em;
        padding-right: 1.2em;
        max-width: 43.5rem;
        margin-left: auto;
        margin-right: auto;
    }
    
    .thirty-width
    {
        width: 30%;
    }
    .forty-width
    {
        width: 40%;
    }
    .forty-five-width
    {
        width: 45%;
    }
    .fifty-width
    {
        width: 50%;
    }
    
    .right-floating
    {
        float: right;
        margin-left: 1.5rem;
    }

    .left-floating
    {
        float: left;
        margin-right: 1.5rem;
    }
}

.warning-text
{
    overflow: auto;
}

.byline
{
    color: #bbb;
}

.section-heading small
{
    color: #bbb;
}

.warning-icon
{
    float: left;
    width: 4.5rem;
    padding: 8px;
    padding-right: 16px;
    float: left;
    user-select: none;
}

img
{
    width: 100%;
}

.article-img
{
    margin-bottom: 1em;
}

.viewable
{
    cursor: pointer;
}

#image-viewer
{
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgb(0, 0, 0, 0.7);
    text-align: center;
    line-height: 100vh;
}

#image-viewer img
{
    display: inline;
    width: auto;
    max-height: 80vh;
    margin: 0;
    vertical-align: middle;
    user-select: none;
}


#image-viewer .close
{
    position: absolute;
    right: 30px;
    top: 30px;
    height: 30px;
    width: 30px;
    cursor: pointer;
    fill: #999;
    border: none;
    background-color: transparent;
}

#image-viewer .close:hover
{
    fill: #bbb;
}


.em-dash
{
    margin-left: 0.2em;
    margin-right: 0.2em;
}

hr
{
    border-color: rgb(180, 180, 180);
    border-width: 1px 0 0 0;
    margin-bottom: 1em;
    border-style: solid;
}

hr.version-divider
{
    margin-top: 5rem;
}

.os-warning p{
    margin: 5px 5px;
}

.inner
{
    padding-left: 1.2em;
    padding-right: 1.2em;
    max-width: 43.5rem;
    margin-left: auto;
    margin-right: auto;
}

.expanded-inner
{
    padding-left: 1.2em;
    padding-right: 1.2em;
    max-width: 58.5rem;
    margin-left: auto;
    margin-right: auto;
}

.contracted-inner
{
    padding-left: 1.2em;
    padding-right: 1.2em;
    max-width: 32.5rem;
    margin-left: auto;
    margin-right: auto;
}

.dark
{
    background-color: black;
    color: white;
}

.article-title
{
    /*This is currently the same as header-title*/
    margin-bottom: 0;
    font-size: 2.4rem;
}

.article-info
{
    color: #666;
    margin-bottom: 1em;
}

.article-bydate-separate
{
    margin-left: 5px;
    margin-right: 5px;
}

.article-byline
{
    display: inline-block;
    margin-top: 0;
    font-size: 0.8rem;
}

.article-dateline
{
    display: inline-block;
    margin-top: 0;
    font-size: 0.8rem;
}

.interests
{
    background-color: darkslategray;
}

h2 .article-heading
{
    font-size: 1rem;
}

body
{
    background-color: #fff;
    font-family: Roboto, serif;
}

.header a
{
    text-decoration: none;
    color: inherit;
}

img
{
    margin-bottom: 1rem;
}

.no-space-after
{
    margin-bottom: 0;
}

.section-heading
{
    margin-bottom: 1rem;
}

.project-title
{
    font-size: 2.5em;
    margin-bottom: 0;
}

.byline
{
    margin-top: 0;
}

section
{
    padding-bottom: 3rem;
}

.button:hover
{
    background-color: #b32253;
}

.button
{
    user-select: none;
    border: none;
    font-size: 1rem;
    padding: 8px 16px;
    background-color: #e91e63;
    cursor: pointer;
    color: white;
    display: inline-block;
    text-decoration: none;
}

p
{
    margin-bottom:1em;
    line-height: 1.5em;
    font-size: 1.08rem;
}

ul
{
    line-height: 1.55rem;
    font-size: 1.08rem;
    padding-inline-start: 40px;
    margin-bottom: 1em;
}

a
{
    color: inherit;
}

.article-item p
{
    margin-bottom: 0;
}

.article-item a:focus
{
    outline: 2px solid blanchedalmond;
}

a:active
{
    color: hotpink;
}

.article-item a:hover
{
    color: hotpink;
}

header hr
{
    width: 90px;
    margin: 0 auto;
    margin-top: 10px;
}

.header a:hover
{
    text-decoration: underline;
}


.header-title
{
    float: left; 
}

.header-links
{
    margin-left: 2rem;
    text-align: center;
}

main
{
    margin-left: auto;
    margin-right: auto;
}

*
{
    text-size-adjust: none;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

